/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'application'
}

repositories {
    
}

group = 'com.falsepattern'
version = '0.6.0'
description = 'jwin32'
java.sourceCompatibility = JavaVersion.VERSION_19
mainClassName = 'com.falsepattern.jwin32.internal.conversion.Translator'

java {
    withSourcesJar()
    withJavadocJar()
}

// foreign stuff is in preview now, not incubating
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
	options.compilerArgs += "--add-exports=java.base/jdk.internal.foreign=ALL-UNNAMED"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
	jvmArgs += '--add-exports=java.base/jdk.internal.foreign=ALL-UNNAMED'
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
	jvmArgs += '--add-exports=java.base/jdk.internal.foreign=ALL-UNNAMED'
	jvmArgs += '--enable-native-access=ALL-UNNAMED'
}


task jextract(type: Exec) {
    group = "jwin32"
    description = "Run the raw jextract task. Requires Windows SDK installed [i.e. VS with C++ workload]"
    //commandLine "java", "-classpath", sourceSets.main.runtimeClasspath.getAsPath(), "Test"
    commandLine 'cmd', '/c', "buildscript\\generate.bat"
}
